--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,59 @@
  *= require_tree .
  *= require_self
  */
+/*
+#fcb1b1
+#96f7d2
+#1ee3cf
+
+#fb3569
+#51eaea
+#fffde1
+#ff9d76
+
+#090088
+#930077
+#e4007c
+#ffbd39
+#a9eec1*/
+
+.container {
+  font-family: arial;
+  align-items: center;
+  text-align: center;
+}
+
+h1 {
+  color: #090088;
+  font-size: 60px;
+}
+
+h2 {
+  color: #ffbd39;
+  font-size: 40px;
+}
+
+h3 {
+  color: #e4007c;
+  font-size: 30px;
+}
+
+.btn {
+  padding: 0.6rem 1.2rem;
+  font-size: 1rem;
+  line-height: 3;
+  border-radius: 0.4rem;
+  text-decoration: none;
+}
+
+.btn-primary {
+  color: white;
+  background-color: #85eba9;
+
+  /* text-shadow: 0.5px 0.5px; */
+}
+
+.btn-primary:hover {
+  color: white;
+  background-color: #930077;
+}
