replaced by JS link

--- a/app/views/result/show.html.erb
+++ b/app/views/result/show.html.erb
@@ -4,7 +4,9 @@
     <h2><%= @name %> </h2>
 
     <div>
-        <%= link_to "Another name", show_path, :class => "btn btn-primary"%>
+
+        <a onclick="window.location.href=''" class="btn btn-primary">Another name</a>
+
      <%= link_to "Back", root_path, :class => "btn " %>
     </div>
 
