--- a/app/views/result/index.html.erb
+++ b/app/views/result/index.html.erb
@@ -1,7 +1,14 @@
 <div class="container">
-    <h1>Name generator </h1>
+  <h1>Name generator </h1>
+  <div>
 
-    <div>
-        <%= link_to "Find a name", show_path , :class => "btn btn-primary" %>
-    </div>
+  <h6>Are you loking for inspiration to name the main character of your book? <br> Or, do you have a baby on the go? </h6>
+
+  <h4>Trust your destiny!</h4>
+  <h5>The app will suggest you a chic French name!</h5>
+
+  </div>
+  <div>
+    <%= link_to "Find a name", show_path , :class => "btn btn-primary" %>
+  </div>
 </div>
